# prositBike

./: .gitignore  Dockerfile  README.md  docker-compose.yml
app/bike_project/: pyproject.toml
app/bike_project/bike/: __init__.py  data_analysis.py  graphs.py  statistic_course.py
app/tests/: test_data_analysis.py
data/: .gitkeep
