[project]
name = "bike"
version = "0.1.0"
description = "CSV bike data analysis utilities"
authors = [{name = "Benjamin AUGER", email = "benjamin.auger@notmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "pyarrow",
    "matplotlib",
    "seaborn"
]

[project.optional-dependencies]
dev = ["pytest", "jupyter", "jupyterlab"]

[project.scripts]
bike-analyze = "bike.data_analysis:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"